crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__index_chain.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{foo[bar][[baz]].qux[quy]}\"#)"
---
{ foo[bar][[baz]].qux[quy]
}
