crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__index_with_root.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{true[[foo]][bar].baz}\"#)"
---
{ true[[foo]][bar].baz
}
