crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__literal_expr.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{true}\"#)"
---
{ true
}
