crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__missing_field_identifier.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{foo..bar}\"#)"
---
Error: Unexpected '.' at offset 5, expected an identifier
