crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__nested_datatype.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{\n                0x1::option::Option<0x2::coin::Coin<0x2::haneul::HANEUL>>::Some#1(\n                    0x2::coin::Coin<0x2::haneul::HANEUL> {\n                        balance: 100u64\n                    }\n                )\n            }\"#,)"
---
{ 0x0000000000000000000000000000000000000000000000000000000000000001::option::Option<0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::haneul::HANEUL>>::Some#1(
      0x0000000000000000000000000000000000000000000000000000000000000002::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::haneul::HANEUL> {
          balance: 100u64,
      },
  )
}
