crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__nested_field_expr.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{foo.bar.baz}\"#)"
---
Expr(
    Expr {
        alternates: [
            Chain {
                root: None,
                accessors: [
                    Field(
                        "foo",
                    ),
                    Field(
                        "bar",
                    ),
                    Field(
                        "baz",
                    ),
                ],
            },
        ],
        transform: None,
    },
)
