crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__numeric_overflow.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{ 0x90_1234_5678u32 }\"#)"
---
Error: Number literal is too large to fit into 'u32'
