crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__numeric_overflow_implicit.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{ 678_901_234_567_890_123_456 }\"#)"
---
Error: Number literal is too large to fit into 'u64'
