crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__numeric_type_suffix_whitespace.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{42 u64}\"#)"
---
Error: Unexpected identifier "u64" at offset 4, expected one of ':', '|', or '}'
