crates/haneul-display/src/v2/snapshots/haneul_display__v2__parser__tests__positional_field_overflow.snap
---
source: crates/haneul-display/src/v2/parser.rs
expression: "strands(r#\"{foo.500}\"#)"
---
Error: Invalid positional field index: number too large to fit in target type
